Always invalidate sticky constraints on the ancestor overflow layer

Previously we only invalidated sticky constraints on the ancestor
overflow layer if the layout object had a paint layer, but we should use
our enclosing layer (which may be the same object, its scroller or
an ancestor with a PaintLayer) to ensure that we invalidate the constraint
within the scroller.

BUG=690580

Review-Url: https://codereview.chromium.org/2683313003
Cr-Commit-Position: refs/heads/master@{#449993}

Former-commit-id: b65f6264820a5c2e82aa1c9953b37ef34a4d02ec